--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,71 +1,32 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
- 
+
 @layer base {
   :root {
-    --background: 0 0% 100%;
-    --foreground: 224 71.4% 4.1%;
-
-    --card: 0 0% 100%;
-    --card-foreground: 224 71.4% 4.1%;
- 
-    --popover: 0 0% 100%;
-    --popover-foreground: 224 71.4% 4.1%;
- 
-    --primary: 220.9 39.3% 11%;
-    --primary-foreground: 210 20% 98%;
- 
-    --secondary: 220 14.3% 95.9%;
-    --secondary-foreground: 220.9 39.3% 11%;
- 
-    --muted: 220 14.3% 95.9%;
-    --muted-foreground: 220 8.9% 46.1%;
- 
-    --accent: 220 14.3% 95.9%;
-    --accent-foreground: 220.9 39.3% 11%;
- 
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 210 20% 98%;
-
-    --border: 220 13% 91%;
-    --input: 220 13% 91%;
-    --ring: 224 71.4% 4.1%;
- 
-    --radius: 0.5rem;
-  }
- 
-  .dark {
-    --background: 224 71.4% 4.1%;
-    --foreground: 210 20% 98%;
- 
-    --card: 224 71.4% 4.1%;
-    --card-foreground: 210 20% 98%;
- 
-    --popover: 224 71.4% 4.1%;
-    --popover-foreground: 210 20% 98%;
- 
-    --primary: 210 20% 98%;
-    --primary-foreground: 220.9 39.3% 11%;
- 
-    --secondary: 215 27.9% 16.9%;
-    --secondary-foreground: 210 20% 98%;
- 
-    --muted: 215 27.9% 16.9%;
-    --muted-foreground: 217.9 10.6% 64.9%;
- 
-    --accent: 215 27.9% 16.9%;
-    --accent-foreground: 210 20% 98%;
- 
-    --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 210 20% 98%;
- 
-    --border: 215 27.9% 16.9%;
-    --input: 215 27.9% 16.9%;
-    --ring: 216 12.2% 83.9%;
+    --background: 52.8 10% 5%;
+    --foreground: 52.8 0% 90%;
+    --card: 52.8 0% 0%;
+    --card-foreground: 52.8 0% 90%;
+    --popover: 52.8 10% 5%;
+    --popover-foreground: 52.8 0% 90%;
+    --primary: 52.8 98.3% 76.9%;
+    --primary-foreground: 0 0% 0%;
+    --secondary: 52.8 10% 10%;
+    --secondary-foreground: 0 0% 100%;
+    --muted: 14.799999999999997 10% 15%;
+    --muted-foreground: 52.8 0% 60%;
+    --accent: 14.799999999999997 10% 15%;
+    --accent-foreground: 52.8 0% 90%;
+    --destructive: 0 50% 30%;
+    --destructive-foreground: 52.8 0% 90%;
+    --border: 52.8 20% 18%;
+    --input: 52.8 20% 18%;
+    --ring: 52.8 98.3% 76.9%;
+    --radius: 0.75rem;
   }
 }
- 
+
 @layer base {
   * {
     @apply border-border;
